tests/expectations/compiler/function/duplicate_parameter_fail.out
DCE_ENABLED:
Error [EPAR0370032]: `console` statements are not yet supported.
    --> compiler-test:4:9
     |
   4 |         console.log("{}", 1u8);
     |         ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.
DCE_DISABLED:
Error [EPAR0370032]: `console` statements are not yet supported.
    --> compiler-test:4:9
     |
   4 |         console.log("{}", 1u8);
     |         ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.